// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppInstallationConfirmationModal should match a snapshot when an uninstallation is requested 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <mock-styled.div />
      <mock-styled.p
        classname="mock-css."
      >
        Are you sure you wish to uninstall 
        TEST APP
        ? This action will uninstall the app for 
        <b>
          all
        </b>
         members of your organisation, and for all office groups.
      </mock-styled.p>
      <mock-styled.div>
        <mock-styled.div
          classname="mock-css."
        >
          <mock-styled.button
            classname="mock-css."
            type="button"
          >
            Cancel
            <mock-styled.div />
          </mock-styled.button>
          <mock-styled.button
            classname="mock-css."
            disabled="false"
            type="button"
          >
            Confirm
            <mock-styled.div />
          </mock-styled.button>
        </mock-styled.div>
      </mock-styled.div>
    </div>
  </body>,
  "container": <div>
    <mock-styled.div />
    <mock-styled.p
      classname="mock-css."
    >
      Are you sure you wish to uninstall 
      TEST APP
      ? This action will uninstall the app for 
      <b>
        all
      </b>
       members of your organisation, and for all office groups.
    </mock-styled.p>
    <mock-styled.div>
      <mock-styled.div
        classname="mock-css."
      >
        <mock-styled.button
          classname="mock-css."
          type="button"
        >
          Cancel
          <mock-styled.div />
        </mock-styled.button>
        <mock-styled.button
          classname="mock-css."
          disabled="false"
          type="button"
        >
          Confirm
          <mock-styled.div />
        </mock-styled.button>
      </mock-styled.div>
    </mock-styled.div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AppInstallationConfirmationModal should match a snapshot when the install type is SPECIFIC_OFFICE_GROUPS 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <mock-styled.div />
      <mock-styled.p
        classname="mock-css."
      >
        Please confirm that you wish to action the following with this app:
      </mock-styled.p>
      <mock-styled.p
        classname="mock-css."
      >
        Installation for 
        1
         office group
      </mock-styled.p>
      <mock-styled.p
        classname="mock-css."
      >
        Uninstallation for 
        1
         office group
      </mock-styled.p>
      <mock-styled.p
        classname="mock-css."
      >
        Before you confirm, please check to ensure you have reviewed and agree with the Desktop Types (if applicable), Pricing Information and Data Permissions.
      </mock-styled.p>
      <mock-styled.p
        classname="mock-css."
      >
        If you are uncertain, please cancel and look at the information located on the app listing.
      </mock-styled.p>
      <mock-styled.div>
        <mock-styled.div
          classname="mock-css."
        >
          <mock-styled.button
            classname="mock-css."
            type="button"
          >
            Cancel
            <mock-styled.div />
          </mock-styled.button>
          <mock-styled.button
            classname="mock-css."
            disabled="false"
            type="button"
          >
            Confirm
            <mock-styled.div />
          </mock-styled.button>
        </mock-styled.div>
      </mock-styled.div>
    </div>
  </body>,
  "container": <div>
    <mock-styled.div />
    <mock-styled.p
      classname="mock-css."
    >
      Please confirm that you wish to action the following with this app:
    </mock-styled.p>
    <mock-styled.p
      classname="mock-css."
    >
      Installation for 
      1
       office group
    </mock-styled.p>
    <mock-styled.p
      classname="mock-css."
    >
      Uninstallation for 
      1
       office group
    </mock-styled.p>
    <mock-styled.p
      classname="mock-css."
    >
      Before you confirm, please check to ensure you have reviewed and agree with the Desktop Types (if applicable), Pricing Information and Data Permissions.
    </mock-styled.p>
    <mock-styled.p
      classname="mock-css."
    >
      If you are uncertain, please cancel and look at the information located on the app listing.
    </mock-styled.p>
    <mock-styled.div>
      <mock-styled.div
        classname="mock-css."
      >
        <mock-styled.button
          classname="mock-css."
          type="button"
        >
          Cancel
          <mock-styled.div />
        </mock-styled.button>
        <mock-styled.button
          classname="mock-css."
          disabled="false"
          type="button"
        >
          Confirm
          <mock-styled.div />
        </mock-styled.button>
      </mock-styled.div>
    </mock-styled.div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AppInstallationConfirmationModal should match a snapshot when the install type is WHOLE_ORG 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <mock-styled.div />
      <mock-styled.p
        classname="mock-css."
      >
        By confirming this installation, you are granting this app access to all data inside of your organisation and all users and offices will have access to this app inside of the AppMarket.
      </mock-styled.p>
      <mock-styled.p
        classname="mock-css."
      >
        Before you confirm, please check to ensure you have reviewed and agree with the Desktop Types (if applicable), Pricing Information and Data Permissions.
      </mock-styled.p>
      <mock-styled.p
        classname="mock-css."
      >
        If you are uncertain, please cancel and look at the information located on the app listing.
      </mock-styled.p>
      <mock-styled.div>
        <mock-styled.div
          classname="mock-css."
        >
          <mock-styled.button
            classname="mock-css."
            type="button"
          >
            Cancel
            <mock-styled.div />
          </mock-styled.button>
          <mock-styled.button
            classname="mock-css."
            disabled="false"
            type="button"
          >
            Confirm
            <mock-styled.div />
          </mock-styled.button>
        </mock-styled.div>
      </mock-styled.div>
    </div>
  </body>,
  "container": <div>
    <mock-styled.div />
    <mock-styled.p
      classname="mock-css."
    >
      By confirming this installation, you are granting this app access to all data inside of your organisation and all users and offices will have access to this app inside of the AppMarket.
    </mock-styled.p>
    <mock-styled.p
      classname="mock-css."
    >
      Before you confirm, please check to ensure you have reviewed and agree with the Desktop Types (if applicable), Pricing Information and Data Permissions.
    </mock-styled.p>
    <mock-styled.p
      classname="mock-css."
    >
      If you are uncertain, please cancel and look at the information located on the app listing.
    </mock-styled.p>
    <mock-styled.div>
      <mock-styled.div
        classname="mock-css."
      >
        <mock-styled.button
          classname="mock-css."
          type="button"
        >
          Cancel
          <mock-styled.div />
        </mock-styled.button>
        <mock-styled.button
          classname="mock-css."
          disabled="false"
          type="button"
        >
          Confirm
          <mock-styled.div />
        </mock-styled.button>
      </mock-styled.div>
    </mock-styled.div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
